--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@kokomoji/CoinPrice",
   "description": "CoinPrice",
-  "homepage": "https://kokomoji.github.io/CoinPrice",//修改这里
+  "homepage": "https://kokomoji.github.io/CoinPrice",
 
   "dependencies": {
     "gh-pages": "^3.1.0"
   },
   "scripts": {
-    "deploy": "gh-pages -d build" //添加这一行
+    "deploy": "gh-pages -d build"
   }
 }
